fixed SearchSort alignment, finished layout for OrdersIndex and AdminOrders

--- a/src/styles/pages/AdminOrders.scss
+++ b/src/styles/pages/AdminOrders.scss
@@ -1,4 +1,5 @@
 #admin-orders {
+
   table td {
     vertical-align: middle;
   }
@@ -12,11 +13,4 @@
     border-top: 2px solid lightgray;
   }
 
-  .fa-trash-alt {
-    color: red;
-  }
-
-  .fa-clone {
-    padding-left: 10px;
-  }
 }
